unpackaged/main/default/objects/Account/fields/Conflict_Test_Field_Electric_Boogaloo__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Test_Field_Electric_Boogaloo__c</fullName>
    <label>Conflict Test Field Electric Boogaloo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>