unpackaged/main/default/objects/Account/fields/Contact2__c.field-meta.xml
<CustomField>
    <fullName>Contact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact2)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>