unpackaged/main/default/objects/Account/fields/Custom_Field_With_Dashes__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_With_Dashes__c</fullName>
    <label>Custom-Field-With-Dashes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>