unpackaged/main/default/objects/Account/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>