unpackaged/main/default/objects/Account/fields/Funky_Number__c.field-meta.xml
<CustomField>
    <fullName>Funky_Number__c</fullName>
    <label>Funky Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NumberGlobalValueSet</valueSetName>
    </valueSet>
</CustomField>