unpackaged/main/default/objects/Account/fields/OrderLookup__c.field-meta.xml
<CustomField>
    <fullName>OrderLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderLookup</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>