unpackaged/main/default/objects/Account/fields/Picklist_Controlling__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Controlling__c</fullName>
    <label>Picklist_Controlling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>