unpackaged/main/default/objects/Account/fields/Picklist_Dependent__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Dependent__c</fullName>
    <label>Picklist_Dependent</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Picklist_Controlling__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>