unpackaged/main/default/objects/Account/fields/Picklist_Global__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Global__c</fullName>
    <description>fsdf</description>
    <label>Picklist_Global</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PicklistValueSet1</valueSetName>
    </valueSet>
</CustomField>