unpackaged/main/default/objects/Account/fields/Renamed_Conflict_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Renamed_Conflict_Test_Field__c</fullName>
    <label>Renamed Conflict Test Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>