unpackaged/main/default/objects/Account/fields/screaming__c.field-meta.xml
<CustomField>
    <fullName>screaming__c</fullName>
    <inlineHelpText>hlep</inlineHelpText>
    <label>screaming</label>
    <length>250</length>
    <type>Text</type>
</CustomField>