unpackaged/main/default/objects/Account/recordTypes/AccountRecordType.recordType-meta.xml
<RecordType>
    <fullName>AccountRecordType</fullName>
    <active>true</active>
    <label>AccountRecordType</label>
</RecordType>