unpackaged/main/default/objects/Account/recordTypes/IDKWhatImDoing.recordType-meta.xml
<RecordType>
    <fullName>IDKWhatImDoing</fullName>
    <active>true</active>
    <description>hgafgsag</description>
    <label>IDKWhatImDoing</label>
</RecordType>